--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -21,11 +21,18 @@
 
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/7291556/6990192/css/fonts.css" />
   <script src="https://kit.fontawesome.com/7d379a052d.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
   <link rel="stylesheet" href="style-assets/css/possible.css" />
 
@@ -40,24 +47,25 @@
     @@include('possible/possible-movie.html')
 
     @@include('possible/dropdown-navbar.html')
-    
-    @@include('possible/improving-health-in-colorado.html')
-    @@include('possible/reimagine-higher-education.html')
-    @@include('possible/master-your-future.html')
-    @@include('possible/brewing-innovation-in-hospitality.html')
-    @@include('possible/multiply-your-roi.html')
-    @@include('possible/on-the-front-lines-of-cybersecurity.html')
-    @@include('possible/learners-connect-with-leaders.html')
-    @@include('possible/teaching-tomorrows-teachers.html')
-    @@include('possible/operating-satelites-from-the-classroom.html')
-    
+
+    @@include('possible/parallax-text-right.html')
+    @@include('possible/white-background-right-photo1.html')
+    @@include('possible/material-image-right.html')
+    @@include('possible/parallax-text-center.html')
+    @@include('possible/white-background-right-photo2.html')
+    @@include('possible/parallax-text-left.html')
+    @@include('possible/white-background-left-photo.html')
+    @@include('possible/parallax-text-center2.html')
+    @@include('possible/white-background-left-photo2.html')
+
     @@include('possible/call-to-action.html')
   </div>
   <div class="footer">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 text-center">
-          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer" src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
+          <a href="https://msudenver.edu"><img class="img-fluid university-logo-footer"
+              src="style-assets/media/possible/MSUDenver_Formal_2CPos_BlueRed_WhBkgd_FormatA_RGB.svg"></a>
         </div>
         <div class="col-sm-12 col-md-6">
           <h2 class="possible-footer">Reimagine <span class="possible-word">possible</span></h2>
@@ -65,7 +73,8 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-sm-12 col-md-8 offset-col-md-4">
-          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>. All rights reserved.</p>
+          <p class="copyright">&copy; 2019 <a href="https://msudenver.edu">Metropolitan State University of Denver</a>.
+            All rights reserved.</p>
         </div>
       </div>
     </div>
