mostly modifications on CSS to get them into a good plcae to work with terminal four

--- a/development/terminalfour/src/html/possible.html
+++ b/development/terminalfour/src/html/possible.html
@@ -43,6 +43,7 @@
 <body style{position: relative;} data-spy="scroll" data-target="#navbar-possible" data-offset="100">
 
   <div id="possible-cards">
+    <!-- Header ends -->
     @@include('possible/introduction.html')
     @@include('possible/possible-movie.html')
 
@@ -59,6 +60,7 @@
     @@include('possible/white-background-left-photo2.html')
 
     @@include('possible/call-to-action.html')
+    <!-- Footer begins -->
   </div>
   <div class="footer">
     <div class="container">
