--- a/www-root/possible.html
+++ b/www-root/possible.html
@@ -86,6 +86,7 @@
 <body style{position: relative;} data-spy="scroll" data-target="#navbar-possible" data-offset="100">
 
   <div id="possible-cards">
+    <!-- Header ends -->
     <section class="introduction" id="introduction">
   <div class="container">
     <div class="row">
@@ -203,11 +204,13 @@
     </div>
   </div>
 </section>
-    <section id="master-your-future">
+    <section class="possible-section red">
+
   <div class="container">
     <div class="col-xs-12">
       <h2>Here, you can master your future.</h2>
-      <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.</h3>
+      <h3>Master’s degrees in business, health, teaching and technology designed to advance your career and community.
+      </h3>
     </div>
     <div class="row">
       <div class="col-xs-12 col-md-6 order-md-12">
@@ -215,12 +218,20 @@
       </div>
       <div class="col-xs-12 col-md-6 order-md-1">
         <div class="copy-swap">
-          <p>Advance your community – and career – with an <a href="https://www.msudenver.edu/graduate-studies/"> advanced degree</a> in a critical Colorado field: <a
-              href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business administration</a>, <a href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>, <a
-              href="https://www.msudenver.edu/programs/master-of-arts-in-teaching-mat.shtml">teaching</a>, <a href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">cybersecurity</a>, <a
-              href="https://www.msudenver.edu/programs/master-of-health-administration-mha.shtml">health administration</a>,
-            <a href="https://www.msudenver.edu/programs/master-of-science-in-human-nutrition-and-dietetics.shtml">human nutrition and dietetics</a>, <a href="https://www.msudenver.edu/programs/master-of-social-work-msw.shtml">social work</a> or
-            <a href="https://www.msudenver.edu/programs/ms-in-clinical-behavioral-health.shtml">clinical behavioral health</a>. Level up in your current job or change careers with a flexible and relevant <a
+          <p>Advance your community – and career – with an <a href="https://www.msudenver.edu/graduate-studies/">
+              advanced degree</a> in a critical Colorado field: <a
+              href="https://www.msudenver.edu/programs/master-of-business-administration-mba.shtml">business
+              administration</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-professional-accountancy-mpacc.shtml">accounting</a>,
+            <a href="https://www.msudenver.edu/programs/master-of-arts-in-teaching-mat.shtml">teaching</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-science-in-cybersecurity.shtml">cybersecurity</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-health-administration-mha.shtml">health
+              administration</a>,
+            <a href="https://www.msudenver.edu/programs/master-of-science-in-human-nutrition-and-dietetics.shtml">human
+              nutrition and dietetics</a>, <a
+              href="https://www.msudenver.edu/programs/master-of-social-work-msw.shtml">social work</a> or
+            <a href="https://www.msudenver.edu/programs/ms-in-clinical-behavioral-health.shtml">clinical behavioral
+              health</a>. Level up in your current job or change careers with a flexible and relevant <a
               href="https://red.msudenver.edu/2019/level-up.html">graduate degree designed with students in
               mind</a>.</p>
         </div>
@@ -229,6 +240,7 @@
     </div>
   </div>
 </section>
+
     <section id="brewing-innovation-in-hospitality" class="brewing-innovation-in-hospitality">
   <div class="container">
     <div class="col-xs-12 well">
@@ -244,24 +256,31 @@
 
   </div>
 </section>
-    <section id="multiply-your-roi">
+    <section id="multiply-your-roi" class="possible-section">
   <div class="container">
     <h2>Best ROI in the business.</h2>
-    <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only sales center in the state.</h3>
+    <h3>Our internationally accredited business college offers the best value in Colorado, a startup spirit and the only
+      sales center in the state.</h3>
 
     <div class="row">
       <div class="col-xs-12 col-md-6 order-md-12">
-          <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
+        <img class="img-thumbnail" src="style-assets/media/possible/MBA.jpg">
       </div>
       <div class="col-xs-12 col-md-6 order-md-1">
-        <br><br><p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of Business</a> earn close to 40% more than they paid for four years of tuition. 
-          That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university in Colorado. 
-          Add that to our first-rate faculty and you’ll be ready to <a href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
+        <br><br>
+        <p>Just one year after graduation, alumni of our <a href="https://www.msudenver.edu/business/">College of
+            Business</a> earn close to 40% more than they paid for four years of tuition.
+          That’s the best ROI of any <a href="https://www.msudenver.edu/business/about/">AACSB-accredited</a> university
+          in Colorado.
+          Add that to our first-rate faculty and you’ll be ready to <a
+            href="https://red.msudenver.edu/2019/opportunities-in-store.html">open your dream franchise</a>, <a
+            href="https://red.msudenver.edu/2019/watch-brewing-success.html">brewery</a> or hotel in no time.</p>
       </div>
 
     </div>
   </div>
 </section>
+
     <section id="on-the-front-lines-of-cybersecurity" class="on-the-front-lines-of-cybersecurity">
   <div class="container">
     <div class="row">
@@ -273,11 +292,12 @@
     </div>
   </div>
 </section>
-    <section class="" id="learners-connect-with-leaders">
+    <section class="" id="learners-connect-with-leaders" class="white">
   <div class="container">
     <h2 style="margin-bottom:30px;">MSU Denver is where learners connect with leaders.</h2>
     <h3><i>
-        99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and have the highest degrees in their disciplines.
+        99% of our classes are taught by faculty, not teaching assistants. They are industry icons, national experts and
+        have the highest degrees in their disciplines.
       </i></h3>
     <div class="row">
       <div class="col-xs-12 col-md-6">
@@ -285,14 +305,19 @@
       </div>
       <div class="col-xs-12 col-md-6">
 
-        <p style="margin-top:5vh;">Learn to fight crime from the former <a href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">director of the NCIS</a>. Analyze graphic novels with the convention <a
-            href="https://red.msudenver.edu/2018/comic-consummate-pro.html">director of Denver’s Pop Culture Con</a>. Get bitten by the insect bug with a <a href="https://red.msudenver.edu/2019/summer-bites.html">renowned mosquito biologist</a>. Our professors
+        <p style="margin-top:5vh;">Learn to fight crime from the former <a
+            href="http://red.msudenver.edu/2019/fighting-crime-from-the-classroom.html">director of the NCIS</a>.
+          Analyze graphic novels with the convention <a
+            href="https://red.msudenver.edu/2018/comic-consummate-pro.html">director of Denver’s Pop Culture Con</a>.
+          Get bitten by the insect bug with a <a href="https://red.msudenver.edu/2019/summer-bites.html">renowned
+            mosquito biologist</a>. Our professors
           are experts in their fields, but even better at passing on their expertise to students.</p>
       </div>
 
     </div>
   </div>
 </section>
+
     <section id="teaching-tomorrows-teachers" class="teaching-tomorrows-teachers-section">
   <div class="container">
     <div class="row">
@@ -346,6 +371,7 @@
     </div>
   </div>
 </section>
+    <!-- Footer begins -->
   </div>
   <div class="footer">
     <div class="container">
