--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Academic Programs Hybrid Test | Academic Programs Hybrid Test | MSU Denver</title>
+  <title>Academic Programs | Academic Programs | MSU Denver</title>
   <!-- Meta Data -->
 
   <meta name="description"
@@ -259,7 +259,7 @@
     <div class="row">
       <!-- SITE HEADER -->
       <div class="col-xs-12 siteheader" id="site-header">
-        <h1>Academic Programs Hybrid Test</h1>
+        <h1>Academic Programs</h1>
       </div>
       <!-- ENDS BREADCRUMBS + SITEHEADER -->
 
@@ -1373,11 +1373,11 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-xs-12 col-md-6 picture-item" data-groups='["Certificate","all"]'>
-                  <a href="/beer/">
+                <div class="col-xs-12 col-md-6 picture-item" data-groups='["Certificate","Campus","all"]'>
+                  <a href="/programs/brewery-operations-certificate.shtml">
                     <div class="Certificate">
                       <div class="card-program">
-                        <h3 class="degreeTitle">Brewery Operations </h3>
+                        <h3 class="degreeTitle">Brewery Operations</h3>
                         <span class="degreeType">
                           Certificate
 
@@ -1386,11 +1386,11 @@
                     </div>
                   </a>
                 </div>
-                <div class="col-xs-12 col-md-6 picture-item" data-groups='["Certificate","Campus","all"]'>
-                  <a href="/programs/brewery-operations-certificate.shtml">
+                <div class="col-xs-12 col-md-6 picture-item" data-groups='["Certificate","all"]'>
+                  <a href="/beer/">
                     <div class="Certificate">
                       <div class="card-program">
-                        <h3 class="degreeTitle">Brewery Operations</h3>
+                        <h3 class="degreeTitle">Brewery Operations </h3>
                         <span class="degreeType">
                           Certificate
 
@@ -5331,9 +5331,8 @@
             </div> <!-- *********************************  -->
             <!-- SITEMANAGER START FOOTER -->
             <!-- *********************************  -->
-            <a class="t4Edit-page"
-              href="https://adt4apps.msudenver.edu/terminalfour/page/directEdit#edit/1/en/116448"><i class="fa fa-edit">
-              </i> Edit this page</a>
+            <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/page/directEdit#edit/1/en/5392"><i
+                class="fa fa-edit"> </i> Edit this page</a>
 
           </div>
         </div>
@@ -5491,6 +5490,20 @@
   </style>
 
 
+  <!--modernizr.custom.min.js-->
+  <script src="/media/assets/degreefiles/modernizr.custom.min.js"></script>
+  <!-- jquery.shuffle.js  -->
+  <script src="/media/assets/degreefiles/jquery.shuffle.js"></script>
+  <!--prism.js   -->
+  <script src="/media/assets/degreefiles/prism.js"></script>
+  <!--page.js-->
+  <script src="/media/assets/degreefiles/page.js"></script>
+  <!-- evenheights.js  -->
+  <script src="/media/assets/degreefiles/evenheights.js"></script>
+  <!-- homepage.js -->
+  <script src="/media/assets/degreefiles/homepage.js"></script>
+
+
   <!-- GET CURRENT JS -->
 
 
@@ -5618,7 +5631,7 @@
       lhnWin = window.open('https://www.livehelpnow.net/lhn/livechatvisitor.aspx?lhnid=29468', 'lhnchat', 'left=' +
         wleft + ',top=' + wtop +
         ',width=580,height=435,toolbar=no,location=no,directories=no,status=yes,menubar=no,scrollbars=no,copyhistory=no,resizable=yes'
-      );
+        );
     }
 
   </SCRIPT>
