--- a/development/terminalfour/src/html/programs.html
+++ b/development/terminalfour/src/html/programs.html
@@ -269,12 +269,13 @@
       <!-- BEGINS HERO IMAGE -->
       <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-          <div class="content">
+          <div class="content shuffle--container">
 
 
             <!-- *********************************  -->
             <!-- SITEMANAGER HEADER ENDS HERE -->
             <!-- *********************************  -->
+
             <style>
               .filter {
                 background-color: #fff;
@@ -553,9 +554,10 @@
                   href="https://www.msudenver.edu/catalog/">MSU Denver catalogs page</a> for current and previous
                 versions. </p>
             </div>
-            <div class="row">
-              <div id="grid" class="col-xs-12 shuffle--container shuffle--fluid">
 
+            <div class="row">
+              <div id="grid" class="col-xs-12  shuffle--fluid">
+                @@include('shuffle.html')
                 <script>
                   $(window).unload(function () {}); // Does nothing but break the bfcache
                   /*! adds URL hash on first click, removes on second */
@@ -764,6 +766,7 @@
 
                 </script>
                 @@include('academic-programs.html')
+
               </div>
             </div> <!-- *********************************  -->
             <!-- SITEMANAGER START FOOTER -->
@@ -909,6 +912,7 @@
                     class="fa fa-youtube-square fa-2x"></i></a></li>
             </ul>
       </section>
+
     </div>
     </div>
   </footer>
@@ -927,24 +931,10 @@
   </style>
 
 
-  <!--modernizr.custom.min.js-->
-  <script src="https://msudenver.edu/media/assets/degreefiles/modernizr.custom.min.js"></script>
-  <!-- jquery.shuffle.js  -->
-  <script src="https://msudenver.edu/media/assets/degreefiles/jquery.shuffle.js"></script>
-  <!--prism.js   -->
-  <script src="https://msudenver.edu/media/assets/degreefiles/prism.js"></script>
-  <!--page.js-->
-  <script src="https://msudenver.edu/media/assets/degreefiles/page.js"></script>
-  <!-- evenheights.js  -->
-  <script src="https://msudenver.edu/media/assets/degreefiles/evenheights.js"></script>
-  <!-- homepage.js -->
-  <script src="https://msudenver.edu/media/assets/degreefiles/homepage.js"></script>
-
-
   <!-- GET CURRENT JS -->
 
 
-  <script src="https://msudenver.edu/media/refresh2019/style-assets/lib/jquery/jquery.min.js"></script>
+  <!-- <script src="https://msudenver.edu/media/refresh2019/style-assets/lib/jquery/jquery.min.js"></script> -->
   <script src="https://msudenver.edu/media/refresh2019/style-assets/lib/jquery-match-height/jquery.matchHeight.js">
   </script>
   <script src="https://msudenver.edu/media/refresh2019/style-assets/lib/bootstrap/bootstrap.min.js"></script>
